0.9.0/_sources/generated/statsmodels.tsa.statespace.mlemodel.MLEResults.rst.txt
statsmodels.tsa.statespace.mlemodel.MLEResults
==============================================

.. currentmodule:: statsmodels.tsa.statespace.mlemodel

.. autoclass:: MLEResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~MLEResults.aic
    
    
      ~MLEResults.bic
    
    
      ~MLEResults.bse
    
    
      ~MLEResults.conf_int
    
    
      ~MLEResults.cov_params
    
    
      ~MLEResults.cov_params_approx
    
    
      ~MLEResults.cov_params_oim
    
    
      ~MLEResults.cov_params_opg
    
    
      ~MLEResults.cov_params_robust
    
    
      ~MLEResults.cov_params_robust_approx
    
    
      ~MLEResults.cov_params_robust_oim
    
    
      ~MLEResults.f_test
    
    
      ~MLEResults.fittedvalues
    
    
      ~MLEResults.forecast
    
    
      ~MLEResults.get_forecast
    
    
      ~MLEResults.get_prediction
    
    
      ~MLEResults.hqic
    
    
      ~MLEResults.impulse_responses
    
    
      ~MLEResults.info_criteria
    
    
      ~MLEResults.initialize
    
    
      ~MLEResults.llf
    
    
      ~MLEResults.llf_obs
    
    
      ~MLEResults.load
    
    
      ~MLEResults.loglikelihood_burn
    
    
      ~MLEResults.normalized_cov_params
    
    
      ~MLEResults.plot_diagnostics
    
    
      ~MLEResults.predict
    
    
      ~MLEResults.pvalues
    
    
      ~MLEResults.remove_data
    
    
      ~MLEResults.resid
    
    
      ~MLEResults.save
    
    
      ~MLEResults.simulate
    
    
      ~MLEResults.summary
    
    
      ~MLEResults.t_test
    
    
      ~MLEResults.t_test_pairwise
    
    
      ~MLEResults.test_heteroskedasticity
    
    
      ~MLEResults.test_normality
    
    
      ~MLEResults.test_serial_correlation
    
    
      ~MLEResults.tvalues
    
    
      ~MLEResults.wald_test
    
    
      ~MLEResults.wald_test_terms
    
    
      ~MLEResults.zvalues
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~MLEResults.use_t
   
   